--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@zxing/browser": "^0.1.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
