--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.52.1",
     "@zxing/browser": "^0.1.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
